# sanic-mailing

./: 404.html  CNAME  index.html  pyproject.toml  setup.py  sitemap.xml  tox.ini
changelog/: index.html
contribute/: index.html
example/: index.html
examples/: features.py  main.py
future-roadmap/: index.html
getting-started/: index.html
install/: index.html
sanic_mailing/: __init__.py  config.py  mail.py
search/: search_index.json
tests/: conftest.py  test_checker.py  test_connection.py  test_message.py  test_redis_config.py  test_sanic_mailing.py
